...
                android:id="@+id/img_add_observation"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_marginTop="86dp"
                android:layout_marginBottom="36dp"
                android:src="@drawable/ic_camera_alt_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text"
...
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:enabled="false"
                android:text="Add observation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_add_observation">

                <EditText
                    android:id="@+id/txt_bird_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bird name" />

                <TextView
                    android:id="@+id/txt_location"
...
