...
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                app:observationList="@{vm.allObservations}"
                tools:listitem="@layout/observation_card"
                android:layout_height="match_parent" />
        </LinearLayout>

...
